# segtree

./: Cargo.toml  LICENSE
benches/: segtree_bench.rs
src/: lazy.rs  lib.rs  query.rs
src/query/: ident.rs
tests/: segtree_mod_prod.rs
