[package]
name = "segtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
ac-library-rs = "0.1.1"
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "segtree_bench"
harness = false
